--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "gatsby-starter-netlify-cms",
-  "description": "Example Gatsby, and Netlify CMS project",
-  "version": "1.1.3",
-  "author": "Austin Green",
+  "name": "andculture-2020",
+  "description": "andculture website",
+  "version": "1.0.0",
+  "author": "Zach McCleaf, Ralph McIntyre",
   "dependencies": {
     "bulma": "^0.8.0",
     "gatsby": "^2.13.31",
@@ -31,9 +31,6 @@
     "react-helmet": "^5.2.0",
     "uuid": "^3.2.1"
   },
-  "keywords": [
-    "gatsby"
-  ],
   "license": "MIT",
   "main": "n/a",
   "scripts": {
@@ -42,7 +39,8 @@
     "build": "npm run clean && gatsby build",
     "develop": "npm run clean && gatsby develop",
     "format": "prettier --trailing-comma es5 --no-semi --single-quote --write \"{gatsby-*.js,src/**/*.js}\"",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint src/**/*.js"
   },
   "devDependencies": {
     "prettier": "^1.15.3"
