--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "lint": "eslint src/**/*.js"
   },
   "devDependencies": {
+    "andculturecode.scss.rhythm": "^1.0.2",
     "prettier": "^1.15.3"
   }
 }
