--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-dom": "^16.8.4",
     "react-google-recaptcha": "^2.0.1",
     "react-helmet": "^5.2.0",
+    "react-spring": "^8.0.27",
     "react-text-loop": "^2.3.0",
     "uuid": "^3.2.1"
   },
