--- a/package.json
+++ b/package.json
@@ -33,8 +33,9 @@
     "react-dom": "^16.8.4",
     "react-google-recaptcha": "^2.0.1",
     "react-helmet": "^5.2.0",
-    "react-spring": "^8.0.27",
+    "react-slick": "^0.25.2",
     "react-text-loop": "^2.3.0",
+    "slick-carousel": "^1.8.1",
     "uuid": "^3.2.1"
   },
   "license": "MIT",
