changing the way the data is handled for case studies

--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "version": "1.0.0",
   "author": "Zach McCleaf, Ralph McIntyre",
   "dependencies": {
+    "@mdx-js/mdx": "^1.5.7",
+    "@mdx-js/react": "^1.5.7",
     "bulma": "^0.8.0",
     "gatsby": "^2.13.31",
     "gatsby-image": "^2.0.23",
+    "gatsby-plugin-mdx": "^1.0.75",
     "gatsby-plugin-netlify": "^2.0.6",
     "gatsby-plugin-netlify-cms": "^4.1.6",
     "gatsby-plugin-purgecss": "^4.0.0",
