--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-helmet": "^5.2.0",
     "react-slick": "^0.25.2",
     "react-text-loop": "^2.3.0",
+    "react-visibility-sensor": "^5.1.1",
     "slick-carousel": "^1.8.1",
     "uuid": "^3.2.1"
   },
