--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -29,6 +29,8 @@ collections:
       - {label: "Featured Image", name: "featuredimage", widget: image}
       - {label: "Body", name: "body", widget: "markdown"}
       - {label: "Tags", name: "tags", widget: "list"}
+      - {label: Meta Title, name: metaTitle, widget: string}
+      - {label: Meta Description, name: metaDescription, widget: string}
 
   - name: "careers"
     label: "Careers"
@@ -51,6 +53,9 @@ collections:
           - {label: Title, name: title, widget: string}
           - {label: Secondary, name: secondaryTitle, widget: string}
           - {label: Subtitle, name: subTitle, widget: string}
+          - {label: Meta Title, name: metaTitle, widget: string}
+          - {label: Meta Description, name: metaDescription, widget: string}
+
       - file: "src/pages/contact.md"
         label: "Contact Page"
         name: "contact"
@@ -63,6 +68,8 @@ collections:
           - {label: Map Link, name: mapLink, widget: string}
           - {label: Phone Number, name: phoneNumber, widget: string}
           - {label: Directions, name: directions, widget: string}
+          - {label: Meta Title, name: metaTitle, widget: string}
+          - {label: Meta Description, name: metaDescription, widget: string}
       - file: "src/pages/about.md"
         label: "About Page"
         name: "about"
@@ -71,3 +78,5 @@ collections:
           - {label: Title, name: title, widget: string}
           - {label: Secondary, name: secondaryTitle, widget: string}
           - {label: Subtitle, name: subTitle, widget: string}
+          - {label: Meta Title, name: metaTitle, widget: string}
+          - {label: Meta Description, name: metaDescription, widget: string}
