--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -66,7 +66,8 @@ collections:
           - {label: Title, name: title, widget: string}
           - {label: Secondary, name: secondaryTitle, widget: string}
           - {label: Subtitle, name: subTitle, widget: string}
-          - {label: Street Address, name: streetAddress, widget: string}
+          - {label: Street Address Line One, name: streetAddressLineOne, widget: string}
+          - {label: Street Address Line Two, name: streetAddressLineTwo, widget: string}
           - {label: Map Link, name: mapLink, widget: string}
           - {label: Phone Number, name: phoneNumber, widget: string}
           - {label: Directions, name: directions, widget: string}
