--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "react-text-loop": "^2.3.0",
     "react-visibility-sensor": "^5.1.1",
     "slick-carousel": "^1.8.1",
-    "uuid": "^3.2.1"
+    "uuid": "^3.2.1",
+    "yup": "^0.28.3"
   },
   "license": "MIT",
   "main": "n/a",
