--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -27,6 +27,7 @@ collections:
       - {label: "Featured Post", name: "featuredpost", widget: "boolean"}
       - {label: "Secondary Layout", name: "secondaryLayout", widget: "boolean"}
       - {label: "Featured Image", name: "featuredimage", widget: image}
+      - {label: "Home Image", name: "homeimage", widget: image}
       - {label: "Body", name: "body", widget: "markdown"}
       - {label: "Tags", name: "tags", widget: "list"}
       - {label: Meta Title, name: metaTitle, widget: string}
