--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -184,3 +184,14 @@ collections:
           - {label: Subtitle, name: subTitle, widget: string}
           - {label: Meta Title, name: metaTitle, widget: string}
           - {label: Meta Description, name: metaDescription, widget: string}
+      - file: "src/pages/blog.md"
+        label: "Blog Page"
+        name: "blog"
+        fields:
+          - {label: "Template Key", name: "templateKey", widget: "hidden", default: "blog-page"}
+          - {label: "Create Page", name: "createPage", widget: "hidden", default: true}
+          - {label: Title, name: title, widget: string}
+          - {label: Secondary, name: secondaryTitle, widget: string}
+          - {label: Subtitle, name: subTitle, widget: string}
+          - {label: Meta Title, name: metaTitle, widget: string}
+          - {label: Meta Description, name: metaDescription, widget: string}
