--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gatsby-plugin-sharp": "^2.2.9",
     "gatsby-plugin-transition-link": "^1.17.7",
     "gatsby-remark-copy-linked-files": "^2.0.7",
+    "gatsby-remark-external-links": "^0.0.4",
     "gatsby-remark-images": "^3.1.6",
     "gatsby-remark-relative-images": "^0.2.1",
     "gatsby-source-filesystem": "^2.0.26",
