--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
   "devDependencies": {
     "andculturecode.scss.rhythm": "^1.0.2",
     "babel-eslint": "^10.0.3",
+    "gatsby-plugin-root-import": "^2.0.5",
     "prettier": "^1.15.3"
   }
 }
