AWE-24: Updating styles based on design feedback

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@mdx-js/mdx": "^1.5.7",
     "@mdx-js/react": "^1.5.7",
+    "@rehooks/component-size": "^1.0.3",
     "bulma": "^0.8.0",
     "gatsby": "^2.13.31",
     "gatsby-image": "^2.0.23",
@@ -42,6 +43,7 @@
     "react-slick": "^0.25.2",
     "react-text-loop": "^2.3.0",
     "react-visibility-sensor": "^5.1.1",
+    "resize-observer-polyfill": "^1.5.1",
     "slick-carousel": "^1.8.1",
     "uuid": "^3.2.1",
     "yup": "^0.28.3"
