--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bulma": "^0.8.0",
     "gatsby": "^2.13.31",
     "gatsby-image": "^2.0.23",
+    "gatsby-plugin-anchor-links": "^1.1.1",
     "gatsby-plugin-google-analytics": "^2.2.2",
     "gatsby-plugin-google-tagmanager": "^2.2.1",
     "gatsby-plugin-mdx": "^1.0.75",
