--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gatsby-plugin-react-helmet": "^3.0.4",
     "gatsby-plugin-sass": "^2.0.7",
     "gatsby-plugin-sharp": "^2.2.9",
+    "gatsby-plugin-smoothscroll": "^1.1.0",
     "gatsby-plugin-transition-link": "^1.17.7",
     "gatsby-remark-copy-linked-files": "^2.0.7",
     "gatsby-remark-external-links": "^0.0.4",
