--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -51,7 +51,7 @@ collections:
       - {label: "Template Key", name: "templateKey", widget: "hidden", default: "blog-post"}
       - {label: "Create Page", name: "createPage", widget: "hidden", default: true}
       - {label: "Title", name: "title", widget: "string"}
-      - {label: "Headline", name: "headline", widget: "string"}
+      - {label: "Headline", name: "headline", widget: "string", required: "false"}
       - label: "Author"
         name: "author"
         widget: "relation"
@@ -60,10 +60,11 @@ collections:
         valueField: "name"
         displayField: "name"
       - {label: "Publish Date", name: "date", widget: "datetime"}
-      - {label: "Featured", name: "featured", widget: "boolean"}
+      - {label: "Featured", name: "featured", widget: "boolean", required: "false"}
       - label: "Featured Color"
         name: "featuredColor"
         widget: "select"
+        required: "false"
         options:
          - { label: "Fresh", value: "-fresh" }
          - { label: "After Hours", value: "-after-hours" }
@@ -78,6 +79,7 @@ collections:
       - label: "Featured Image"
         name: "featuredimage"
         widget: "object"
+        required: "false"
         fields:
          - {label: "Image", name: "image", widget: "image"}
          - {label: "Description", name: "description", widget: "string"}
@@ -128,6 +130,7 @@ collections:
         label_singular: "Link"
         name: "socialLinks"
         widget: "list"
+        required: "false"
         fields:
         - label: "Platform"
           name: "platform"
@@ -152,7 +155,7 @@ collections:
         default: "Design"
       - {label: "Short Description", name: "description", widget: "string"}
       - {label: "Application URL", name: "applicationUrl", widget: "string"}
-      - {label: "Active", name: "active", widget: "boolean"}
+      - {label: "Active", name: "active", widget: "boolean", required: "false"}
       - {label: "Body", name: "body", widget: "markdown", buttons: ["bold", "italic", "code", "link", "bulleted-list", "numbered-list"]}
       - label: "SEO"
         name: "seo"
