Adding the client logos to the work page

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -313,4 +313,22 @@ collections:
              - {label: "Meta Title", name: "metaTitle", widget: "string"}
              - {label: "Meta Description", name: "metaDescription", widget: "string"}
              - {label: "Social Sharing Copy", name: "socialShareCopy", widget: "string"}
+  - name: "clients"
+    label: "Clients"
+    label_singular: "Client"
+    folder: "src/data/clients"
+    create: true
+    identifier_field: "name"
+    fields:
+      - {label: "Template Key", name: "templateKey", widget: "hidden", default: "client"}
+      - {label: "Create Page", name: "createPage", widget: "hidden", default: false}
+      - {label: "Name", name: "name", widget: "string"}
+      - {label: "Priority", name: "priority", widget: "number", valueType: "int"}
+      - label: "Logo"
+        name: "logo"
+        required: "true"
+        widget: "object"
+        fields:
+         - {label: "Image", name: "image", widget: "image"}
+         - {label: "Description", name: "description", widget: "string"}
 
