--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -24,7 +24,7 @@ collections:
       - {label: "Create Page", name: "createPage", widget: "hidden", default: true}
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Partner Name", name: "partnerName", widget: "string"}
-      - {label: "Texture", name: "texture", widget: "string"}
+      - {label: "Texture", name: "texture", widget: image}
       - {label: "Publish Date", name: "date", widget: "datetime"}
       - {label: "Description", name: "description", widget: "text"}
       - {label: "Featured Post", name: "featuredpost", widget: "boolean"}
