--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -222,7 +222,7 @@ collections:
       - {label: "Name", name: "name", widget: "string"}
       - {label: "Priority", name: "priority", widget: "number", valueType: "int"}
       - {label: "Description", name: "description", widget: "text"}
-      - {label: "Roles", name: "roles", widget: "list"}
+      - {label: "Roles", name: "rolesList", widget: "list"}
       - label: "Image"
         name: "image"
         widget: "object"
