in process of building departmentList component, currently working on getting images to show up

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -223,11 +223,8 @@ collections:
       - {label: "Priority", name: "priority", widget: "number", valueType: "int"}
       - {label: "Description", name: "description", widget: "text"}
       - {label: "Roles", name: "rolesList", widget: "list"}
-      - label: "Image"
-        name: "image"
-        widget: "object"
-        fields:
-        - {label: "Source", name: "src", widget: "image"}
+      - {label: "Department Illustration", name: "deptImg", widget: string}
+
 
   - name: "pages"
     label: "Pages"
