trying to use childImageSharp for image import, committing to get feedback, currently compile error

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -223,7 +223,7 @@ collections:
       - {label: "Priority", name: "priority", widget: "number", valueType: "int"}
       - {label: "Description", name: "description", widget: "text"}
       - {label: "Roles", name: "rolesList", widget: "list"}
-      - {label: "Department Illustration", name: "deptImg", widget: string}
+      - {label: "Department Illustration", name: "deptImg", widget: image}
 
 
   - name: "pages"
