Feature/about page styling next steps (#46)
* change roles attr to rolesList, change to square brackets

* in process of building departmentList component, currently working on getting images to show up

* trying to use childImageSharp for image import, committing to get feedback, currently compile error

* got images showing up!

* good styling progress - img sizing, padding, switching of flex direction

Co-authored-by: Peter Stone <pstone@andculture.com>

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -222,12 +222,9 @@ collections:
       - {label: "Name", name: "name", widget: "string"}
       - {label: "Priority", name: "priority", widget: "number", valueType: "int"}
       - {label: "Description", name: "description", widget: "text"}
-      - {label: "Roles", name: "roles", widget: "list"}
-      - label: "Image"
-        name: "image"
-        widget: "object"
-        fields:
-        - {label: "Source", name: "src", widget: "image"}
+      - {label: "Roles", name: "rolesList", widget: "list"}
+      - {label: "Department Illustration", name: "deptImg", widget: image}
+
 
   - name: "pages"
     label: "Pages"
